Fix contents table

--- a/notebooks/Phase2.ipynb
+++ b/notebooks/Phase2.ipynb
@@ -26,9 +26,11 @@
     "- [Sentiment analysis extraction](#Sentiment-analysis-extraction)\n",
     "  - [Execution of the sentiment analysis and database update](#Execution-of-the-sentiment-analysis-and-database-update)\n",
     "- [Anonymization](#Anonymization)\n",
-    "  - [Calculate-UUIDs-for-the-users]\n",
-    "  \n",
-    "  \n"
+    "  - [Calculate UUIDs for the users](#Calculate-UUIDs-for-the-users)\n",
+    "  - [Calculate UUIDs for the tweets](#Calculate-UUIDs-for-the-tweets)\n",
+    "  - [Swap users' IDs](#Swap-users'-IDs)\n",
+    "  - [Check for potentially missed ObjectIDs](#Check-for-potentially-missed-ObjectIDs)\n",
+    "  - [Strip information from the tweets and swap IDs](#Strip-information-from-the-tweets-and-swap-IDs)"
    ]
   },
   {
